fixed issue with text off screen and footer

--- a/pet_creation_and_update.css
+++ b/pet_creation_and_update.css
@@ -243,6 +243,10 @@ header {
     height: 70vh;
 }
 
+.space-bottom{
+    margin-bottom: 40px;
+}
+
 /* responsive design */
 @media (max-width: 1000px) {
     .pet-details {
